# TargetDef

./: CMakeLists.txt  conanfile.py
inc/targetdef/: header.hpp
inc/targetdef/targeta/: header.hpp
inc/targetdef/targetb/: header.hpp
src/targeta/: header.cpp
src/targetb/: header.cpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
